--- a/aip.tex
+++ b/aip.tex
@@ -1530,9 +1530,9 @@ We show that we can lift a pair whose minimal face is $\collapse{\G}$ to one who
 %    The result then follows from \Cref{cor: a property of minimal faces}.
 % \end{proof}
 
-\begin{proposition}
+\begin{corollary}
    If $\denom$ is a universal denominator for a monomial matrix $\matA$, then~$\denom$ is a universal denominator for all collapses of $\matA$.
-\end{proposition}
+\end{corollary}
 
 \begin{proof}
    Let $\O$ be a standard face of the Newton polyhedron $\N$ of $\matA$, and let overbars denote collapsing along $\O$.
