--- a/aip.tex
+++ b/aip.tex
@@ -1274,18 +1274,26 @@ Below, we adopt the notation established in \Cref{collapse: D}, and we use an ov
    The nonzero vectors among $\collapse{\canvec}_1,\ldots,\collapse{\canvec}_\numvars$ are precisely the standard basis vectors in  $\RR^{\#\rb(\O)^\perp}$, so this agrees with the definition of the Newton polyhedron of $\collapse{\matA}$.
 \end{proof}
 
+\begin{definition}
+   Let $\N$ be the Newton polyhedron of a monomial matrix~$\matA$, and~$\O$ a standard face of~$\N$.
+   A face $\G$ of $\N$ is \emph{collapsible along $\O$} if $\rb(\O) \subseteq \rb(\G)$.
+   A monomial pair $(\matA,\vv{u})$ is collapsible along $\O$ if its minimal face is collapsible along~$\O$.
+   If the face $\O$ along which we are collapsing is clear from the context, we shall simply say that a face or monomial pair is \emph{collapsible}.
+\end{definition}
+
+The next proposition is the motivation behind this definition and our choice of terminology.
+
 \begin{proposition}[Faces under collapsing]
    \label{faces under collapsing: P}
-   Let $\O$ be a standard face of the Newton polyhedron $\N \subseteq \RR^\numvars$.
-   As above, we use an overbar to denote collapse along $\O$.
+   Let $\O$ be a standard face of the Newton polyhedron $\N \subseteq \RR^\numvars$, and let overbars denote collapse along $\O$.
    Let $\pi: \N \to \collapse{\N}$ be the collapsing along $\O$, restricted to $\N$.
-   Then $\pi$ induces a one-to-one correspondence between the faces of $\N$ whose recession bases contain $\rb(\O)$ and the faces of $\collapse{\N}$, which associates standard faces to standard faces.
+   Then $\pi$ induces a one-to-one correspondence between the collapsible faces of $\N$ and the faces of $\collapse{\N}$, which associates standard faces to standard faces.
    More precisely,
    \begin{enumerate}[$(1)$]
-      \item If $\G$ is a face of $\N$ such that $\rb(\O) \subseteq \rb(\G)$, defined in $\N$ by a point $\vv{g}$, then $\collapse{\G} = \pi(\G)$ is a face of $\collapse{\N}$, defined by the point $\collapse{\vv{g}}$.
+      \item If $\G$ is a collapsible face of $\N$, defined in $\N$ by a point $\vv{g}$, then $\collapse{\G} = \pi(\G)$ is a face of $\collapse{\N}$, defined by the point $\collapse{\vv{g}}$.
       The recession basis of $\collapse{\G}$ consists of the nonzero vectors in $\collapse{\rb(\G)}$, so $\collapse{\G}$ is bounded if and only if $\rb(\G) = \rb(\O)$.
       Moreover, $\G$ is standard if and only if $\collapse{\G}$ is standard, and $\pi^{-1}(\collapse{\G}) = \G$.
-      \item If $\H$ is a face of $\collapse{\N}$ defined by a point $\vv{h}$, then $\pi^{-1}(\H)$ is a face of $\N$ defined by the unique point $\vv{k}\in\rs(\O)^\perp$ such that $\collapse{\vv{k}} = \vv{h}$.
+      \item If $\H$ is a face of $\collapse{\N}$ defined by a point $\vv{h}$, then $\pi^{-1}(\H)$ is a collapsible face of $\N$ defined by the unique point $\vv{k}\in\rs(\O)^\perp$ such that $\collapse{\vv{k}} = \vv{h}$.
       The recession basis of $\pi^{-1}(\H)$ is the union of $\rb(\O)$ with the set $\{\canvec_i\in \ZZ^\numvars: \pi(\canvec_i)\in \rb(\H)\}$.
       Moreover, $\H$ is standard if and only if $\pi^{-1}(\H)$ is standard, and $\collapse{\pi^{-1}(\H)} = \H$.
    \end{enumerate}
@@ -1344,17 +1352,17 @@ Below, we describe the relationship between collapses and notions associated to 
 
 \begin{proposition}[Minimal face, degree, special and optimal points under collapsing]
    \label{collapse of mf and mc: P}
-   Consider a monomial pair $(\matA, \vv{u})$\textup; let $\G = \mf(\matA,\vv{u})$, and let an overbar denote collapse along a standard face $\O$ of the Newton polyhedron of $\matA$ with  $\rb(\O)\subseteq \rb(\G)$.
-   Then the following hold.
+   Let $\O$ be a standard face of the Newton polyhedron of a monomial matrix $\matA$, and let an overbar denote collapse along $\O$.
+   If the monomial pair $(\matA, \vv{u})$ is collapsible, then the following hold.
    \begin{enumerate}[$(1)$]
-      \item $\mf(\collapse{\matA}, \collapse{\vv{u}}) = \collapse{\G}$ and $\degree(\matA,\vv{u}) = \degree(\collapse{\matA},\collapse{\vv{u}})$.
+      \item $\mf(\collapse{\matA}, \collapse{\vv{u}})$ is the collapse of $\mf(\matA,\vv{u})$, and $\degree(\matA,\vv{u}) = \degree(\collapse{\matA},\collapse{\vv{u}})$.
       \item Each optimal point for $\LP(\matA, \vv{u})$ is also optimal for $\LP(\collapse{\matA}, \collapse{\vv{u}})$.
-      \item Each special point for $(\matA, \vv{u})$ is a special point for $(\collapse{\matA}, \collapse{\vv{u}})$.
+      \item Each special point for $(\matA, \vv{u})$ is a special point for $(\collapse{\matA}, \collapse{\vv{u}})$. 
    \end{enumerate}
 \end{proposition}
 
 \begin{proof}
-   Set $\lambda = \degree(\matA,\vv{u})$, so that $\lambda^{-1} \vv{u} \in \ri\G$.
+   Set $\G = \mf(\matA,\vv{u})$ and $\lambda = \degree(\matA,\vv{u})$, so that $\lambda^{-1} \vv{u} \in \ri\G$.
    As $\collapse{\ri\G} = \ri{\collapse{\G}}$ (see, \eg \cite[4.9]{vantiel.convex_analysis}), $\lambda^{-1}\collapse{\vv{u}}$ must lie in the relative interior of $\collapse{\G}$, a  face of the Newton polyhedron of~$\collapse{\matA}$ by \Cref{faces under collapsing: P}.
    This shows that $\mf(\collapse{\matA},\collapse{\vv{u}}) = \collapse{\G}$ and $\degree(\collapse{\matA},\collapse{\vv{u}}) = \lambda$, giving~(1).
 
@@ -1363,8 +1371,8 @@ Below, we describe the relationship between collapses and notions associated to 
    \[ \val \LP(\matA, \vv{u}) = \degree(\matA,\vv{u}) = \degree(\collapse{\matA},\collapse{\vv{u}}) = \val \LP(\collapse{\matA}, \collapse{\vv{u}})\]
    it follows that any optimal point for $\LP(\matA, \vv{u})$ must be optimal for $\LP(\collapse{\matA}, \collapse{\vv{u}})$, giving~(2).
 
-   If $\vv{s}$ is a special point for $(\matA,\vv{u})$, then $\vv{s}$ is optimal for $\LP(\matA,\vv{u})$, and therefore for $\LP(\collapse{\matA},\collapse{\vv{u}})$, and $\vv{u} = \matA\vv{s}+\vv{w}$, where $\vv{w} \in \ri\cone(\rb(\G))$.
-   Collapsing this equation, we get $\collapse{\vv{u}} = \collapse{\matA} \vv{s} + \collapse{\vv{w}}$, and \Cref{faces under collapsing: P} shows that $\collapse{\vv{w}} \in \ri\cone(\rb(\collapse{\G}))$, so $\vv{s}$ is special for $(\collapse{\matA},\collapse{\vv{u}})$. 
+   If $\vv{s}$ is a special point for $(\matA,\vv{u})$, then $\vv{s}$ is optimal for $\LP(\matA,\vv{u})$, and therefore for $\LP(\collapse{\matA},\collapse{\vv{u}})$, and $\vv{u} = \matA\vv{s}+\vv{w}$, where $\vv{w}$ is a positive point of $\rs(\G)$.
+   Collapsing this equation, we get $\collapse{\vv{u}} = \collapse{\matA} \vv{s} + \collapse{\vv{w}}$, and \Cref{faces under collapsing: P} shows that $\collapse{\vv{w}}$ is a positive point of $\rs(\collapse{\G})$, so $\vv{s}$ is special for $(\collapse{\matA},\collapse{\vv{u}})$. 
 \end{proof}
 
 % \begin{proposition}[Minimal face, degree, special and optimal points under collapsing]
