--- a/aip.tex
+++ b/aip.tex
@@ -40,6 +40,7 @@ TO DO LIST:
  If it's used right away, ``Lemma'' is OK; if there's no use in sight, use ``Proposition''.
  \item[$\Box$] Change the order of items in a monomial list from $(\matA,\vv{u},\vv{s},q)$ to $(\matA,\vv{u},q,\vv{s})$ (so it is a monomial triple plus something extra).
  So far this has been done only in the definition.
+ \item[$\Box$] Make notation in \Cref{convenient: SS} consistent with the new notation used in \Cref{sprouting: S} (after it stabilizes).
 \end{enumerate}}
  \details[inline]{
  	TO DO LIST:
@@ -1016,7 +1017,7 @@ It is clear from these interpretations that a very small pair must also be small
 \end{remark}
 
 Although there may exist infinitely many points $\vv{u}$ such that the monomial pair $(\matA,\vv{u})$ is small but not very small, only a finite number of those points are minimal with respect to componentwise inequality, by Dickson's Lemma \cite[Lemma~A]{dickson}.
-From the computational perspective, it will be important to know where to look for these minimal points.
+From the computational perspective, it is important to know where to look for these minimal points.
 This is accomplished by the following proposition, which concretely describes a bounded set containing all such minimal points.
 
 \begin{proposition}
@@ -1286,7 +1287,7 @@ The next proposition is the motivation behind this definition and our choice of 
 
 \begin{proposition}[Faces under collapsing]
    \label{faces under collapsing: P}
-   Let $\O$ be a standard face of the Newton polyhedron $\N \subseteq \RR^\numvars$, and let overbars denote collapse along $\O$.
+   Let $\O$ be a standard face of a Newton polyhedron $\N \subseteq \RR^\numvars$, and let overbars denote collapse along $\O$.
    Let $\pi: \N \to \collapse{\N}$ be the collapsing along $\O$, restricted to $\N$.
    Then $\pi$ induces a one-to-one correspondence between the collapsible faces of $\N$ and the faces of $\collapse{\N}$, which associates standard faces to standard faces.
    More precisely,
@@ -1365,12 +1366,12 @@ Below, we describe the relationship between collapses and notions associated to 
 \begin{proof}
    Set $\G = \mf(\matA,\vv{u})$ and $\lambda = \degree(\matA,\vv{u})$, so that $\lambda^{-1} \vv{u} \in \ri\G$.
    As $\collapse{\ri\G} = \ri{\collapse{\G}}$ (see, \eg \cite[4.9]{vantiel.convex_analysis}), $\lambda^{-1}\collapse{\vv{u}}$ must lie in the relative interior of $\collapse{\G}$, a  face of the Newton polyhedron of~$\collapse{\matA}$ by \Cref{faces under collapsing: P}.
-   This shows that $\mf(\collapse{\matA},\collapse{\vv{u}}) = \collapse{\G}$ and $\degree(\collapse{\matA},\collapse{\vv{u}}) = \lambda$, giving~(1).
+   This shows that $\mf(\collapse{\matA},\collapse{\vv{u}}) = \collapse{\G}$ and $\degree(\collapse{\matA},\collapse{\vv{u}}) = \lambda$.
 
    Since each row of $\collapse{\matA}$ is a row of $\matA$, the constraints of $\LP(\collapse{\matA}, \collapse{\vv{u}})$ are a subset of those of $\LP(\matA, \vv{u})$, and hence $\feas \LP(\matA,\vv{u})$ is a subset of $\feas \LP(\collapse{\matA},\collapse{\vv{u}})$.
    As 
    \[ \val \LP(\matA, \vv{u}) = \degree(\matA,\vv{u}) = \degree(\collapse{\matA},\collapse{\vv{u}}) = \val \LP(\collapse{\matA}, \collapse{\vv{u}})\]
-   it follows that any optimal point for $\LP(\matA, \vv{u})$ must be optimal for $\LP(\collapse{\matA}, \collapse{\vv{u}})$, giving~(2).
+   it follows that any optimal point for $\LP(\matA, \vv{u})$ must be optimal for $\LP(\collapse{\matA}, \collapse{\vv{u}})$.
 
    If $\vv{s}$ is a special point for $(\matA,\vv{u})$, then $\vv{s}$ is optimal for $\LP(\matA,\vv{u})$, and therefore for $\LP(\collapse{\matA},\collapse{\vv{u}})$, and $\vv{u} = \matA\vv{s}+\vv{w}$, where $\vv{w}$ is a positive point of $\rs(\G)$.
    Collapsing this equation, we get $\collapse{\vv{u}} = \collapse{\matA} \vv{s} + \collapse{\vv{w}}$, and \Cref{faces under collapsing: P} shows that $\collapse{\vv{w}}$ is a positive point of $\rs(\collapse{\G})$, so $\vv{s}$ is special for $(\collapse{\matA},\collapse{\vv{u}})$. 
@@ -1441,8 +1442,8 @@ Below, we describe the relationship between collapses and notions associated to 
 
 Let $\N$ be the Newton polyhedron of a monomial matrix $\matA$ with $\numvars$ rows, and $\O$ a standard face of $\N$.
 Denote the collapsing along $\O$ by an overbar.
-As shown in \Cref{faces under collapsing: P}, any standard face of $\collapse{\N}$ is of the form $\collapse{\G}$, for some standard face $\G$ of $\N$ with $\rb(\O) \subseteq \rb(\G)$.
-We show that we can lift a pair whose minimal face is $\collapse{\G}$ to one whose minimal face is $\G$.
+As shown in \Cref{faces under collapsing: P}, every standard face of $\collapse{\N}$ is of the form $\collapse{\G}$, for some (unique) collapsible standard face $\G$ of $\N$.
+We now show that we can lift a pair whose minimal face is $\collapse{\G}$ to one whose minimal face is $\G$.
 
 \begin{proposition}[Lifting pairs]
    \label{prop: lifting pairs}
@@ -1546,7 +1547,7 @@ We show that we can lift a pair whose minimal face is $\collapse{\G}$ to one who
 \begin{proof}
    Let $\O$ be a standard face of the Newton polyhedron $\N$ of $\matA$, and let overbars denote collapsing along $\O$.
    Consider a monomial pair $(\collapse{\matA},\vv{w})$.
-   By \Cref{faces under collapsing: P}, $\mf(\collapse{\matA},\vv{w}) = \collapse{\G}$ for some standard face $\G$ of $\N$ such that $\rb(\O) \subseteq \rb(\G)$.
+   By \Cref{faces under collapsing: P}, $\mf(\collapse{\matA},\vv{w}) = \collapse{\G}$ for some collapsible standard face $\G$ of $\N$.
    By \Cref{prop: lifting pairs}, there exists a positive point $\vv{u}$ in the target lattice of $\matA$ such that $\collapse{\vv{u}} = \vv{w}$ and $\mf(\matA,\vv{u}) = \G$.
    Finally, by \Cref{collapse of mf and mc: P} every special point for $(\matA,\vv{u})$ is a special point for $(\collapse{\matA},\vv{w})$, so $(\collapse{\matA},\vv{w})$ has a special point with denominator $\denom$.
 \end{proof}
